fixed UI alignment issues

--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -734,6 +734,11 @@ button:focus{outline: 0;}
 #btn-search::-moz-placeholder { /* Firefox 19+ */color: transparent;}
 #btn-search:-ms-input-placeholder { /* IE 10+ */color: transparent;}
 #btn-search:-moz-placeholder { /* Firefox 18- */color: transparent;}
+
+#btn-search:focus::-webkit-input-placeholder { /* Chrome/Opera/Safari */color: #aaa;}
+#btn-search:focus::-moz-placeholder { /* Firefox 19+ */color: #aaa;}
+#btn-search:focus:-ms-input-placeholder { /* IE 10+ */color: #aaa;}
+#btn-search:focus:-moz-placeholder { /* Firefox 18- */color: #aaa;}
 .admin_padding_wrap #btn-search{position: absolute;right: 20px;}
 #btn-search {border: none; background: url(../images/search_icon_red.png) 2px center no-repeat; z-index: 1; width: 25px; height: 25px; transition: all .25s ease-in .25s; color: transparent; line-height: 25px; /*position: absolute;  right: 27px;  top: 15px;*/}
 #btn-search:hover {cursor: pointer; }
