--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -140,7 +140,7 @@ $menuTrans:all 0.5s linear;
   .ml_app_profile.profile_open>ol>li .my-ml-exit_or_logoff{ margin: 7px 0 0 4px; font-size: 18px; }
 
   .header_search{/* position: absolute;right: 90px; */}
-  .notification{/* position: absolute;right: 55px;float:right */margin-right: 55px;margin-left:10px; margin-top:0px;}
+  .notification{/* position: absolute;right: 55px;float:right */margin-right: 56px;margin-left:10px; margin-top:0px;}
   .notification .noti_count{color: $mlBlack;background: $mlYellow; border-radius: 100%; width: 15px; height: 15px; font-size: 10px; /* padding: 5px; */ line-height: 15px; position: absolute; margin-left: 8px; top: 7px; right: 0px;}
   .app_header {
       .ml{text-shadow:none;}
